overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,8 @@
       justify-content: center;
       gap: 20px;
       min-width: 300px;
-      overflow: visible;
+      overflow-y: visible;
+      overflow-x: hidden;
       position: relative;
       align-self: center;
       -webkit-user-select: auto;
